<resources>
    <string name="app_name">StreetMart</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter UserName</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="fashion">Fashion</string>
    <string name="medicines">Medicines</string>
    <string name="appliance">Appliance</string>
    <string name="grocery">Grocery</string>
    <string name="local_for_vocal">Local for Vocal</string>

    <string-array name="items">
        <item>Honey</item>
        <item>ToothBrush</item>
        <item>Tomato</item>
        <item>Oximeter</item>
        <item>Apple</item>
        <item>Tshirt</item>
        <item>Shoes</item>
        <item>BloodPressure</item>

    </string-array>

    <string-array name="description">
        <item></item>
        <item>ToothBrush</item>
        <item>Tomato</item>
        <item>Oximeter</item>
        <item>Apple</item>
        <item>Tshirt</item>
        <item>Shoes</item>
        <item>Pendrive</item>
        <item>BloodPressure</item>

    </string-array>


</resources>