<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="90dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/fashion"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/medicines"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/appliance"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_search" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/grocery"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="53dp"
            android:layout_height="43dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41"
            app:srcCompat="@drawable/ic_baseline_menu_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="256dp"
        android:layout_height="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toEndOf="@+id/coordinatorLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cart" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="185dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/local_for_vocal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>