<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg1"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/wlCm"
        android:layout_width="247dp"
        android:layout_height="136dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/UserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        app:srcCompat="@drawable/wlcm1" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="#121111"
        android:textColorLink="#121212"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_below="@id/UserName"
        android:layout_marginBottom="28dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#0B0A0A"
        android:textColorLink="#0E0D0D"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Login"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_below="@id/Password"
        android:layout_marginBottom="276dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frgtPass"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/otherSign"
        app:layout_constraintTop_toBottomOf="@+id/frgtPass"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherSign">

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/gitlogo"
            tools:layout_editor_absoluteX="162dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dontAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="don't have an account? "
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/SignupTextBtn"
        android:layout_width="85dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="SignUp"
        android:textColor="#680D0D"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontAccount"
        app:layout_constraintVertical_bias="0.157" />


</androidx.constraintlayout.widget.ConstraintLayout>